--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        # NOTE: macos-x uses 10X the github CI minutes so be careful using that
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ['3.9', '3.10', '3.11']
 
@@ -41,8 +42,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        python-version: ['3.9', '3.10', '3.11']
+        # NOTE: macos-x uses 10X the github CI minutes so be careful using that
+        os: [ubuntu-latest] #, macos-latest, windows-latest]
+        python-version: ['3.9'] #, '3.10', '3.11']
 
     steps:
     - name: Checkout Repository
