--- a/.github/workflows/matrix-test.yml
+++ b/.github/workflows/matrix-test.yml
@@ -9,11 +9,12 @@ on:
       - main
 
 jobs:
-  test:
-    name: Run Tests
+  unit-tests:
+    name: Run Unit Tests
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        # NOTE: macos-x uses 10X the github CI minutes so be careful using that
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ['3.9', '3.10', '3.11']
 
@@ -35,6 +36,30 @@ jobs:
       run: |
         python -m unittest discover -s tests/unit
 
+
+  integration-tests:
+    name: Run Tests
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        # NOTE: macos-x uses 10X the github CI minutes so be careful using that
+        os: [ubuntu-latest] #, macos-latest, windows-latest]
+        python-version: ['3.9'] #, '3.10', '3.11']
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v2
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+        
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
     - name: Run Integration Tests
       run: |
         python -m unittest discover -s tests/integration
